--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
    - assets/
+   - assets/namelogo.png
    - assets/slider/
    - assets/category/
    - assets/products/tops/
