--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,10 +6,13 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+        <!-- android:icon="@mipmap/ic_launcher" -->
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="Shopping Junction"
-        android:icon="@mipmap/ic_launcher">
+
+        android:icon="@drawable/logo"
+        >
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
