--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   carousel_slider: ^1.3.0
   graphql_flutter: ^3.0.0
   cached_network_image: ^2.0.0
+  flappy_search_bar: ^1.7.2
 
 dev_dependencies:
   flutter_test:
