--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ flutter:
    - assets/products/tops/
    - assets/products/top_selling/
    - assets/products/tshirt/
-   - assets/
+   - assets/banner/
    - assets/products/men/topwear/
    - assets/products/men/bottomwear/
    - assets/products/women/topwear/
