--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,13 +55,13 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-   - assets/
+  #  - assets/
    - assets/namelogo.png
-   - assets/slider/
-   - assets/category/
-   - assets/products/tops/
+  #  - assets/slider/
+  #  - assets/category/
+  #  - assets/products/tops/
    - assets/products/top_selling/
-   - assets/products/tshirt/
+  #  - assets/products/tshirt/
    - assets/banner/
   #  - assets/products/men/topwear/
   #  - assets/products/men/bottomwear/
