--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   graphql_flutter: ^3.0.0
   cached_network_image: ^2.0.0
   flappy_search_bar: ^1.7.2
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
+  complimentary_colors: ^1.0.3
 
 dev_dependencies:
   flutter_test:
