--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,10 +22,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  shared_preferences: ^0.4.2
+  image_picker: ^0.6.5+5
+  dio: ^3.0.9
+  shared_preferences: ^0.5.7+3
   http: ^0.12.0+2
   font_awesome_flutter: ^8.5.0
-  url_launcher: ^3.0.3  
+  url_launcher: ^5.4.10  
   cupertino_icons: ^0.1.2
   carousel_slider: ^1.3.0
   graphql_flutter: ^3.0.0
@@ -34,6 +36,8 @@ dependencies:
   bloc: ^4.0.0
   flutter_bloc: ^4.0.0
   complimentary_colors: ^1.0.3
+  # image_picker: ^0.6.5+3
+
 
 dev_dependencies:
   flutter_test:
